// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it passes a11y 1`] = `
<div>
  <div
    class="govuk-form-group lbh-form-group"
    id="test"
  >
    <label
      class="govuk-label lbh-label"
      for="test-field"
    >
      Select Test
      
    </label>
    <select
      class="govuk-select lbh-select"
      id="test-field"
      name="test"
    >
      <option
        value="name"
      >
        Name
      </option>
    </select>
  </div>
</div>
`;

exports[`it renders correctly 1`] = `
<div>
  <select
    class="govuk-select lbh-select"
  />
</div>
`;

exports[`it renders correctly with error 1`] = `
<div>
  <select
    class="govuk-select lbh-select govuk-select--error"
  />
</div>
`;
